<resources>
    <string name="app_name">悄息</string>
    <string name="app_title">悄 息</string>
    <string name="account_name">账号:</string>
    <string name="account_secret">密码:</string>
    <string name="login">登录</string>
    <string name="logout">退出登录</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="conversation">会话</string>
    <string name="contact">联系人</string>
    <string name="mine">我的</string>
    <string name="discover">发现</string>
    <string name="send">发送</string>
    <string name="input_name_secret">请输入用户名和密码</string>
    <string name="input_acount_remind">账号/Account number</string>
    <string name="input_passwd_remind">密码/Password</string>
    <string name="please_enter_message">请输入消息</string>
    <string name="change_account">切换账号</string>
    <string name="logon"><![CDATA[还没有账号？<b><font color="#06BFA7">点击注册</font></b>]]></string>
    <string name="add_contact">添加好友</string>
    <string name="my_groups">我的群组</string>
    <string name="secure_chat">私密聊天</string>
    <string name="send_message">发送信息</string>
    <string name="wallet">钱包</string>


</resources>
