<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>
        <variable
            name="viewmodel"
            type="com.example.qiaoxi.dataprocess.LoginViewModel" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fitsSystemWindows="true"
        tools:context=".view.activity.LoginActivity">

        <com.example.qiaoxi.view.customerview.CustomerImgView
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:scaleType="fitXY"
            android:src="@mipmap/cat1"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:layout_marginTop="80dp"
            android:visibility="@{viewmodel.lastUserIconVisible}"
            />

<!--        <com.airbnb.lottie.LottieAnimationView-->
<!--            android:layout_width="wrap_content"-->
<!--            android:layout_height="wrap_content"-->
<!--            app:layout_constraintStart_toStartOf="parent"-->
<!--            app:layout_constraintBottom_toBottomOf="parent"-->
<!--            app:lottie_fileName="data.json"-->
<!--            android:id="@+id/login_anim"-->
<!--            />-->

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginTop="150dp"
            android:layout_marginStart="50dp"
            android:layout_marginEnd="50dp"
            android:visibility="@{viewmodel.nameEditVisible}"
            >
            <EditText
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:hint="@string/input_acount_remind"
                android:text="@={viewmodel.userName}"
                android:paddingStart="10dp"
                android:id="@+id/input_account" />

        </com.google.android.material.textfield.TextInputLayout>


        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginTop="230dp"
            android:layout_marginStart="50dp"
            android:layout_marginEnd="50dp"
            android:hint="@string/input_passwd_remind"

            >
            <EditText
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:inputType="textPassword"
                android:paddingStart="10dp"
                android:text="@={viewmodel.userPassword}"
                android:id="@+id/input_secret" />
        </com.google.android.material.textfield.TextInputLayout>



        <Button
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/login"
            android:textSize="18sp"
            android:textColor="@color/pure_white"

            android:onClick="@{() -> viewmodel.login()}"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginStart="50dp"
            android:layout_marginEnd="50dp"
            android:background="@drawable/green_r5_btn"
            app:layout_constraintBottom_toBottomOf="parent"
            android:layout_marginBottom="100dp"
            android:transitionName="shared_login_btn"
            android:id="@+id/login" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/login"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:id="@+id/login_change_account"
            android:text="@string/change_account"
            android:layout_marginTop="15dp"
            android:visibility="@{viewmodel.lastUserIconVisible}"
            android:onClick="@{() -> viewmodel.changeAccount()}"
            />
    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>