<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>
        <variable
            name="viewModel"
            type="com.example.qiaoxi.dataprocess.ContactViewModel" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/pure_white"
        >

        <com.example.qiaoxi.view.customerview.QXToolbar
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:id="@+id/contact_toolbar"
            app:title="@string/contact"
            app:titleTextMarginStart="15"
            app:titleTextColor="@color/pure_black"
            app:rightButton_src="@mipmap/search_black"
            />
        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/danhui_0"
            android:id="@+id/toolbar_gap"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/contact_toolbar" />

        <ImageView
            android:layout_width="52dp"
            android:layout_height="52dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/toolbar_gap"
            android:id="@+id/contact_add_friend"
            android:src="@mipmap/add_contact"
            android:layout_marginTop="30dp"
            android:layout_marginStart="40dp"
            />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="@id/contact_add_friend"
            app:layout_constraintEnd_toEndOf="@id/contact_add_friend"
            app:layout_constraintTop_toBottomOf="@id/contact_add_friend"
            android:textSize="13sp"
            android:textColor="@color/gray_686868"
            android:text="@string/add_contact"
            android:id="@+id/add_contact_text"
            android:layout_marginTop="5dp"

            />


        <ImageView
            android:layout_width="52dp"
            android:layout_height="52dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/toolbar_gap"
            android:id="@+id/contact_groups"
            android:src="@mipmap/chat_group"
            android:layout_marginTop="30dp"
            />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="@id/contact_groups"
            app:layout_constraintEnd_toEndOf="@id/contact_groups"
            app:layout_constraintTop_toBottomOf="@id/contact_groups"
            android:textSize="13sp"
            android:textColor="@color/gray_686868"
            android:text="@string/my_groups"
            android:id="@+id/contact_groups_text"
            android:layout_marginTop="5dp"

            />

        <ImageView
            android:layout_width="52dp"
            android:layout_height="52dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/toolbar_gap"
            android:id="@+id/contact_secure_chat"
            android:src="@mipmap/private_secret"
            android:layout_marginTop="30dp"
            android:layout_marginEnd="40dp"
            />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="@id/contact_secure_chat"
            app:layout_constraintEnd_toEndOf="@id/contact_secure_chat"
            app:layout_constraintTop_toBottomOf="@id/contact_secure_chat"
            android:textSize="13sp"
            android:textColor="@color/gray_686868"
            android:text="@string/secure_chat"
            android:id="@+id/contact_secure_chat_text"
            android:layout_marginTop="5dp"

            />
        

        <androidx.recyclerview.widget.RecyclerView
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:id="@+id/friend_recy"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/add_contact_text"
            android:layout_marginTop="30dp"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="40dp"
            android:overScrollMode="never"
            app:layout_constraintBottom_toBottomOf="parent" />


        <com.example.qiaoxi.view.customerview.LetterNavigationView
            android:layout_width="30dp"
            android:layout_height="0dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="@id/friend_recy"
            app:layout_constraintBottom_toBottomOf="@id/friend_recy"
            android:id="@+id/contact_letterNavigation"
            />

        <TextView
            android:layout_width="40dp"
            android:layout_height="40dp"
            app:layout_constraintEnd_toStartOf="@id/contact_letterNavigation"
            app:layout_constraintTop_toTopOf="@id/contact_letterNavigation"
            android:visibility="invisible"
            android:textSize="25sp"
            android:textColor="@color/pure_black"
            android:background="@drawable/main_green_r12_bg"
            android:id="@+id/contact_showNavigationLetter"
            android:gravity="center"
            />

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>